v1.04: Use new simd gradle plugin for the simd sources
Signed-off-by: Irmo van den Berge <irmo.vandenberge@mailbox.org>